🎨 remove unused configuration